# astrolog-rs

./: .gitignore  BUILD.md  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  SVG_CHARTS_README.md  TIGHT_TRANSIT_ORBS_IMPLEMENTATION.md  TRANSIT_ASPECTS_IMPROVEMENT.md  TRANSIT_FEATURE_SUMMARY.md  api.paw  build.rs  chart_styles.json  chart_styles_new.json  example_requests.sh  gensvg.rb  start-server.sh  start.sh  test_improved_positioning.sh  test_opacity_chart.sh  test_radial_positioning.sh  test_svg_charts.sh  test_synastry_radial.sh
chart_svg/: app.py  synastry.json
chart_svg/chart_generators/: base_chart.py  natal_chart.py  synastry_chart.py  transit_chart.py
chart_svg/styles/: chart_styles.py
chart_svg/utils/: math_utils.py  svg_utils.py
doc/: API_DOCUMENTATION.md  MAJOR_ASPECTS_IMPLEMENTATION.md
ext/swisseph/: Cargo.toml  build.rs  swemini  swetest  swevents
ext/swisseph/src/: lib.rs
load_tester/: error_payload.json  error_payload.lua  loadtest.sh  natal_payload.json  natal_payload.lua  synastry_payload.json  synastry_payload.lua  transit_payload.json  transit_payload.lua
macos/: install-service.sh
src/: lib.rs  main.rs
src/api/: mod.rs  models.rs  queue.rs  server.rs  types.rs
src/api/handlers/: mod.rs
src/api/routes/: mod.rs
src/calc/: angles.rs  aspects.rs  coordinates.rs  houses.rs  mod.rs  planets.rs  swiss_ephemeris.rs  swiss_ephemeris_ffi.rs  time.rs  utils.rs  vsop87.rs
src/calc/tests/: aspects_test.rs  coordinates_test.rs  houses_test.rs  mod.rs  planets_test.rs
src/charts/: mod.rs  styles.rs  svg_generator.rs
src/core/: calc.rs  chart.rs  mod.rs  types.rs
src/data/: mod.rs
src/io/: mod.rs
src/tests/: api_tests.rs  chart_generation.rs  chart_tests.rs  mod.rs  types_tests.rs  utils_tests.rs
src/tests/functional/: chart_test.rs  mod.rs
src/utils/: logging.rs  mod.rs
systemd/: astrolog-rs.service  install-service.sh  uninstall-service.sh
tests/: api_tests.rs  major_aspects_test.rs
