[package]
name = "astrolog-rs"
version = "0.2.0"
edition = "2021"
authors = ["Original by Walter D. Pullen", "Rust port by Your Name"]
description = "A modern Rust port of the Astrolog astrology program as a backend service"
license = "MIT"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Core dependencies
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
approx = "0.5.1"
num_cpus = "1.16"
lazy_static = "1.4"

# Web framework
actix-web = "4.4"
actix-cors = "0.7"
tokio = { version = "1", features = ["full"] }

# CLI for development
clap = { version = "4.3", features = ["derive"], optional = true }

# Swiss Ephemeris
swisseph = { path = "./external/swisseph" }

# Optional dependencies for different features
# These will be enabled via feature flags
[features]
default = ["api"]
api = []  # API server mode
cli = ["clap"]  # Command line interface mode
gui = ["eframe"]  # GUI interface
graphics = ["image"]  # Graphics output
postscript = []  # PostScript output
metafile = []  # Windows metafile output

[dependencies.eframe]
version = "0.22"
optional = true

[dependencies.image]
version = "0.24"
optional = true

[dev-dependencies]
approx = "0.5"
tokio-test = "0.4"
actix-rt = "2.9.0"

[build-dependencies]
cc = "1.0"
